change by Sarab

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>My name is Vikas Yadav</h2>
-    <h1>My name is Sarabjeet Singh -Here Srabjeet</h1>
+    <h1>PULL TESTING</h1>
   </body>
 </html>
