adding style.css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style src="./style.css"></style>
     <title>Document</title>
   </head>
   <body>
     <h1>PULL TESTING</h1>
+    <h1>Testing by vikas</h1>
   </body>
 </html>
